--- a/src/html/groupcoursemanagement.html
+++ b/src/html/groupcoursemanagement.html
@@ -19,8 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
-
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 </head>
@@ -53,7 +52,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -223,14 +224,83 @@
           学员组课程管理
         </div>
         <div class="row">
-          <div class="col-xs-12">
-            这里是内容
+          <div class="col-xs-12 xc-stu-group">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">创建学员组</button>
+            <table class="table table-words">
+              <thead>
+                <tr>
+                  <th class="col-xs-2">学员组名</th>
+                  <th class="col-xs-4">当前设置的课程阶段</th>
+                  <th class="col-xs-2">当前组内付费学生数量</th>
+                  <th class="col-xs-4">上架情况(只有没有学员的学员组可以下架）</th>
+                  <th class="col-xs-2"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>小学组</td>
+                  <td>启蒙课程、小学课程</td>
+                  <td>500</td>
+                  <td>
+                    <label class="switch switch-lg jq-switch">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#modal">编辑</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>初中组</td>
+                  <td>启蒙课程、小学课程</td>
+                  <td>500</td>
+                  <td>
+                    <label class="switch switch-lg jq-switch">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#modal">编辑</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>高中组</td>
+                  <td>启蒙课程、小学课程</td>
+                  <td>500</td>
+                  <td>
+                    <label class="switch switch-lg jq-switch">
+                      <input type="checkbox" checked="checked">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#modal">编辑</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>废弃的组别</td>
+                  <td>启蒙课程</td>
+                  <td>0</td>
+                  <td>
+                    <label class="switch switch-lg jq-switch">
+                      <input type="checkbox">
+                      <span></span>
+                    </label>
+                  </td>
+                  <td>
+                    <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#modal">编辑</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
@@ -242,7 +312,57 @@
 
 
   </div>
-
+  <div id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade in">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" data-dismiss="modal" aria-label="Close" class="close">
+            <span aria-hidden="true">×</span>
+          </button>
+          <h4 id="myModalLabel" class="modal-title">创建/编辑学员组</h4>
+        </div>
+        <div class="modal-body">
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label class="col-lg-2 control-label">学员组名</label>
+              <div class="col-lg-10">
+                <input type="text" placeholder="请输入学员组名" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-lg-2 control-label">设置课程阶段</label>
+              <div class="col-lg-10">
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="" name='kc'>启蒙课程
+                  </label>
+                </div>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="" name='kc'>小学课程
+                  </label>
+                </div>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="" name='kc'>初中课程
+                  </label>
+                </div>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" value="" name='kc'>高中课程
+                  </label>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" data-dismiss="modal" class="btn btn-default">取消</button>
+          <button type="button" class="btn btn-primary">保存修改</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- build:js -->
   <!-- =============== JS ===============-->
   <script src="../js/vendor/modernizr/modernizr.custom.js"></script>
@@ -257,7 +377,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+  <script src="../js/groupcoursemanagement.js"></script>
 
 
 
