--- a/src/html/schoolmanagement_list.html
+++ b/src/html/schoolmanagement_list.html
@@ -19,8 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
-
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -55,7 +54,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -243,124 +244,24 @@
             <!-- START panel-->
             <div class="panel-default">
               <div class="panel-heading">
-                <form class="text-right form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">选择班级：</label>
-                      <div class="col-sm-8">
-                        <select name="" id="" class="form-control">
-                          <option value="">全部</option>
-                          <option value="1">班级1</option>
-                          <option value="2">班级2</option>
-                        </select>
-                      </div>
+                <div class="xc-mb10">
+                  <button class="btn btn-primary">创建学校</button>
+                </div>
+                <form class="form-horizontal">
+                  <div class="form-group">
+                    <label class="col-lg-1 control-label">选择省份</label>
+                    <div class="col-lg-4">
+                      <input type="email" placeholder="Email" class="form-control">
                     </div>
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
-                      <div class="col-sm-8">
-                        <input type="tel" name="" class="form-control">
-                      </div>
+                    <label class="col-lg-1 control-label">检索学校</label>
+                    <div class="col-lg-4">
+                      <input type="text" placeholder="请输入学校编号或学校名" class="form-control">
                     </div>
-                    <div class="col-sm-1">
-                      <button type="button" class="btn btn-primary">搜索</button>
+                    <div class="col-lg-2">
+                      <button class="btn btn-primary">检索</button>
                     </div>
                   </div>
                 </form>
-              </div>
-              <!-- START table-responsive-->
-              <div class="panel-heading">
-                <div class="table-responsive">
-                  <table id="" class="table table-bordered table-hover">
-                    <thead>
-                      <tr>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>总学习效率</th>
-                        <th>最后一天学习效率</th>
-                        <th>连续未学</th>
-                        <th>学生总积分</th>
-                        <th>总学习天数</th>
-                        <th>操作</th>
-                      </tr>
-                    </thead>
-                    <tbody id="designerlist">
-                      <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
-                        <td>
-                          <a class="btn btn-primary" href="schoolmanagement_sales_info.html">查看</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
-                        <td>
-                          <a class="btn btn-primary" href="schoolmanagement_sales_info.html">查看</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
-                        <td>
-                          <a class="btn btn-primary" href="schoolmanagement_sales_info.html">查看</a>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-
-                <!-- build:pages -->
-                <!-- 分页 -->
-                <div class="row">
-                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                    <ul class="pagination pagination-sm m0">
-                      <li>
-                        <a href="#" aria-label="Previous">
-                          <span aria-hidden="true">«</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">1</a>
-                      </li>
-                      <li>
-                        <a href="#">2</a>
-                      </li>
-                      <li class="active">
-                        <a href="#">3</a>
-                      </li>
-                      <li>
-                        <a href="#" aria-label="Next">
-                          <span aria-hidden="true">»</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>  
-                <!-- endbuild -->
-
-
-
-
-
-
-
-
-
               </div>
             </div>
           </div>
@@ -402,8 +303,6 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
-
 
 
 
