--- a/src/html/schoolmanagement_setting.html
+++ b/src/html/schoolmanagement_setting.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -53,7 +53,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -224,13 +226,186 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <div class="panel">
+              <div class="panel-heading">
+                <div class="xc-tab jq-xc-tab">
+                  <ul class="xc-tab-head">
+                    <li class="active">小学</li>
+                    <li class="">初中</li>
+                    <li>高中</li>
+                    <span class="line" style="left: 0px;"></span>
+                  </ul>
+                  <ul class="xc-tab-body">
+                    <li class="active">
+                      <form class="form-horizontal">
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">30天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">60天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">90天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">6个月:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">1年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">2年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">3年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                      </form>
+                    </li>
+                    <li class="">
+                      <form class="form-horizontal">
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">30天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">60天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">90天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">6个月:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">1年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">2年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">3年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                      </form>
+                    </li>
+                    <li>
+                      <form class="form-horizontal">
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">30天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">60天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">90天:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">6个月:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">1年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">2年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-1 control-label">3年:</label>
+                          <div class="col-lg-5">
+                            <input type="text" placeholder="请输入学员组名" class="form-control">
+                          </div>
+                          <label class="control-label">元</label>
+                        </div>
+                      </form>
+                    </li>
+                  </ul>
+                  <button class="btn btn-primary">保存</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
@@ -257,7 +432,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
-
+  <script src="../js/schoolmanagement.js"></script>
 
 
 
