--- a/src/html/coursemanagement_class.html
+++ b/src/html/coursemanagement_class.html
@@ -23,6 +23,8 @@
 
 
 
+
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -69,6 +71,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -202,6 +206,8 @@
 
 
 
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper coursemanagement-wp">
@@ -227,7 +233,7 @@
                 <div class="col-sm-2">6</div>
                 <div class="col-sm-3">6</div>
                 <div class="col-sm-2">6 <a href="javascript:;">查看</a></div>
-                <button class="pull-right btn btn-primary jq-addcourse" type="button">新增课程</button>
+                <a type="button" href="./coursemanagement_classadd.html" class="pull-right btn btn-primary jq-addcourse" type="button">新增课程</a>
               </div>
             </div>
             <div class="panel-wrapper collapse" aria-expanded="true" style="height: 0px;">
@@ -246,7 +252,7 @@
                 <div class="col-sm-2">6</div>
                 <div class="col-sm-3">6</div>
                 <div class="col-sm-2">6 <a href="javascript:;">查看</a></div>
-                <button class="pull-right btn btn-primary jq-addcourse" type="button">新增课程</button>
+                <a type="button" href="./coursemanagement_classadd.html" class="pull-right btn btn-primary jq-addcourse" type="button">新增课程</a>
               </div>
             </div>
             <div class="panel-wrapper collapse" aria-expanded="true" style="height: 0px;">
@@ -304,6 +310,8 @@
 
 
 
+
+
   </div>
 
   <!-- build:js -->
@@ -320,6 +328,8 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
 
 
 
