--- a/src/html/datastatistics.html
+++ b/src/html/datastatistics.html
@@ -25,6 +25,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -55,9 +56,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span>
-                <i class="fa fa-user"></i>admin</span>
-              <span>|</span>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
               <a href="#">
@@ -69,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -163,6 +163,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -552,6 +553,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -568,6 +570,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
