--- a/src/html/salesdata.html
+++ b/src/html/salesdata.html
@@ -29,6 +29,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -71,6 +72,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -189,6 +191,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -199,13 +202,51 @@
           <div class="col-xs-12">
             <!-- START panel-->
             <div class="panel-default">
+              <div class="panel-heading">
+                <form class="text-right form-lineH">
+                  <div class="row">
+                    <div class="form-group col-sm-4">
+                      <label class="col-sm-4">搜索条件：</label>
+                      <div class="col-sm-8">
+                        <select name="" id="" class="form-control">
+                          <option value="">全部</option>
+                          <option value="1">条件1</option>
+                          <option value="2">条件2</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                      <label class="col-sm-4">查询时间：</label>
+                      <div class="col-sm-4">
+                        <p class="input-group date col-sm-12 datetimepicker">
+                          <input type="text" class="form-control" placeholder="请选择开始时间">
+                          <span class="input-group-addon">
+                              <span class="fa fa-calendar"></span>
+                          </span>
+                        </p>
+                      </div>
+                      <div class="col-sm-4">
+                        <p class="input-group date col-sm-12 datetimepicker">
+                          <input type="text" class="form-control" placeholder="请选择开始时间">
+                          <span class="input-group-addon">
+                              <span class="fa fa-calendar"></span>
+                          </span>
+                        </p>
+                      </div>
+                    </div>
+                    <div class="col-sm-2">
+                      <button type="button" class="btn btn-primary jq-change">创建教师</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
               <!-- START table-responsive-->
               <div class="panel-heading">
                 <div class="table-responsive">
                   <table id="" class="table table-bordered table-hover">
                     <thead>
                       <tr>
-                        <th>月份</th>
+                        <th style="min-width: 100px;">月份</th>
                         <th>月末余额</th>
                         <th >学校储值情况</th>
                         <th >本月续费人数</th>
@@ -336,6 +377,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -349,6 +391,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -380,6 +423,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
