--- a/src/html/17_study_word.html
+++ b/src/html/17_study_word.html
@@ -24,33 +24,46 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <!-- build:head -->
-  
   <header class="comm-header">
-    <div class="midd_header clearfix">
-      <div class="index_icon">
-        <a href="index.html"></a>
-      </div>
-      <ul class="nav clearfix">
-        <li class="active">
-          <a href="#">课程中心</a>
+  <div class="midd_header clearfix">
+    <div class="index_icon">
+      <a href="index.html"></a>
+    </div>
+    <ul class="nav clearfix">
+      <li class="active">
+        <a href="#">课程中心</a>
+      </li>
+      <li>
+        <a href="#">我的班级</a>
+      </li>
+      <li>
+        <a href="#">排行榜</a>
+      </li>
+      <li>
+        <a href="#">学币商城</a>
+      </li>
+    </ul>
+    <div class="login">
+      <a href="#">个人中心</a>
+      <ul class="head-list">
+        <li>
+          <a class="info" href='javascript:;'>个人资料</a>
         </li>
         <li>
-          <a href="#">我的班级</a>
+          <a class="honor" href='javascript:;'>荣誉中心</a>
         </li>
         <li>
-          <a href="#">排行榜</a>
+          <a class='test'href='javascript:;'>测试记录</a>
         </li>
         <li>
-          <a href="#">学币商城</a>
+          <a class="task" href='javascript:;'>我的任务</a>
         </li>
       </ul>
-      <div class="login">
-        <a href="#">个人中心</a>
-      </div>
     </div>
-  </header>
-
+  </div>
+</header>
   <!-- endbuild -->
+
 
 
 
@@ -182,6 +195,7 @@
     </div>
   </div>
   <!-- endbuild -->
+
 
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
